--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -5,8 +5,35 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Clasificador Bayes Ingenuo" Height="279.397" Width="520.837">
     <Grid>
-        
+        <GroupBox Header="Entrada" Height="51" VerticalAlignment="Top" Margin="10,5,10,0">
+            <Grid>
+                <Label Content="Seleccionar dataset:&#xD;&#xA;" HorizontalAlignment="Left" Margin="0,2,0,0" Height="23" VerticalAlignment="Top"/>
+                <TextBox HorizontalAlignment="Left" Height="19" Margin="115,6,0,0" TextWrapping="Wrap" Text="dataset.csv" VerticalAlignment="Top" Width="216" TextChanged="TextBox_TextChanged" TextAlignment="Right"/>
+                <Button Content="Seleccionar archivo..." Margin="336,5,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="135"/>
+            </Grid>
+        </GroupBox>
+        <GroupBox Header="Pruebas" Height="94" Margin="10,61,10,0" VerticalAlignment="Top">
+            <Grid>
+                <CheckBox Content="Usar archivo de pruebas externo:" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top"/>
+                <TextBox HorizontalAlignment="Left" Height="19" Margin="209,48,0,0" TextWrapping="Wrap" Text="dataset.csv" VerticalAlignment="Top" Width="122" TextChanged="TextBox_TextChanged" TextAlignment="Right"/>
+                <Button Content="Seleccionar archivo..." Margin="336,47,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="135"/>
+                <RadioButton Content="Validación simple:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                <RadioButton Content="Validación cruzada:" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"/>
+                <TextBox HorizontalAlignment="Left" Height="19" Margin="135,28,0,0" TextWrapping="Wrap" Text="50" VerticalAlignment="Top" Width="20" TextChanged="TextBox_TextChanged" IsEnabled="False" TextAlignment="Center"/>
+                <TextBox HorizontalAlignment="Left" Height="19" Margin="135,8,0,0" TextWrapping="Wrap" Text="60" VerticalAlignment="Top" Width="20" TextChanged="TextBox_TextChanged" TextAlignment="Center"/>
+                <Label Content="%" HorizontalAlignment="Left" Margin="155,4,0,0" VerticalAlignment="Top" Width="20"/>
+                <Label Content="%" HorizontalAlignment="Left" Margin="155,24,0,0" VerticalAlignment="Top" Width="20"/>
+            </Grid>
+        </GroupBox>
+        <GroupBox Header="Discretización" Height="50" Margin="10,160,10,0" VerticalAlignment="Top">
+            <Grid>
+                <Label Content="Intervalo de discretización:&#xA;" HorizontalAlignment="Left" Margin="0,2,0,0" Height="23" VerticalAlignment="Top"/>
+                <TextBox HorizontalAlignment="Left" Height="19" Margin="151,6,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="20" TextChanged="TextBox_TextChanged" TextAlignment="Center"/>
+            </Grid>
+        </GroupBox>
+        <Button Content="Comenzar análisis" Margin="366,215,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="132"/>
+        <Button Content="Limpiar valores" Margin="10,215,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="100"/>
     </Grid>
 </Window>
