--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -33,7 +33,7 @@
                 <TextBox x:Name="intervalValue_txt" HorizontalAlignment="Left" Height="19" Margin="151,6,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="20" TextChanged="TextBox_TextChanged" TextAlignment="Center"/>
             </Grid>
         </GroupBox>
-        <Button x:Name="start_btn" Content="Comenzar análisis" Margin="366,215,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="132"/>
+        <Button x:Name="start_btn" Content="Comenzar análisis" Margin="366,215,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="132" Click="start_btn_Click"/>
         <Button x:Name="clear_btn" Content="Limpiar valores" Margin="10,215,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="100" Click="Button_Click"/>
     </Grid>
 </Window>
